Fixed various issues with changing the font size
* On macOS, the preferences for changed fonts was not stored
* On Windows, the fonts did not change in dark mode
* The KPIs were displayed in the regular font
* The shares in the statement of asssets were displayed too small
* The performance calculation showed bold entries in wrong font

Issue: #2306

--- a/name.abuchen.portfolio.ui/css/dark/common.css
+++ b/name.abuchen.portfolio.ui/css/dark/common.css
@@ -58,3 +58,12 @@ CustomColors {
 	font-weight: bold;
 	color: #D7D8D8;
 }
+
+.kpi {
+	font-size: 21px;
+	font-weight: normal;
+}
+
+.datapoint {
+	font-size: 10px;
+}
