--- a/name.abuchen.portfolio.ui/css/light/common.css
+++ b/name.abuchen.portfolio.ui/css/light/common.css
@@ -84,12 +84,6 @@ CustomColors {
 
 }
 
-.header {
-	font-size: 14px;
-	font-weight: bold;
-	color: #393E42;
-}
-
 .heading1 {
 	font-size: 14px;
 	font-weight: bold;
@@ -99,4 +93,13 @@ CustomColors {
 .heading2 {
 	font-weight: bold;
 	color: #393E42;
+}
+
+.kpi {
+	font-size: 21px;
+	font-weight: normal;
+}
+
+.datapoint {
+	font-size: 10px;
 }
